--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     },
     "author": "Marc Rufeis",
     "license": "ISC",
-    "comment": "created with the vscode Let's Hassel extension"
+    "comment": "created with the vscode Let's Hassel extension",
+    "devDependencies": {
+        "eslint": "^7.30.0"
+    },
+    "dependencies": {
+        "mqtt": "^4.2.8"
+    }
 }
